--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,10 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
-    image: flask-app:latest
+    image: flask-app
     container_name: flask-container
+    volumes:
+        - ./:/usr/local/app
     ports:
       - 80:8000 # localport:dockerport
     # command: flask run --host=0.0.0.0
